--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "proyecto de Node con Typescript donde usamos como DB postgressSQL y para autenticar JWT",
   "main": "src/app.js",
   "scripts": {
-    "dev" : "tsnd --respawn --clear src/server.ts",
+    "dev": "tsnd --respawn --clear src/server.ts",
     "build": "rimraf dist && tsc -p .",
     "start": "node dist/server.js"
   },
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.25",
@@ -22,6 +23,7 @@
   "dependencies": {
     "@prisma/client": "^5.10.2",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
